Fixed text overflow on 404 page with long urls, fixed image carousel responding badly to tall images.

--- a/static/css/error_handler.css
+++ b/static/css/error_handler.css
@@ -21,3 +21,9 @@ img{
     border-radius: 5rem;
     align-items: center;
 }
+
+.invalid-url{
+    padding-left: 2vw;
+    padding-right: 2vw;
+    overflow-wrap: anywhere;
+}
